# gh-actions-pytest

./: pyproject.toml
.github/workflows/: test.yml
test_pkg/: mod.py  run.sh
test_pkg.egg-info/: PKG-INFO  SOURCES.txt
tests/py_tests/: conftest.py  test_run.py
